test/fail/assignment-type.app
//is incompatible with type in left-hand side
application test

define page root() {
}

function test(){
  var s := "rwefd";
  s := 34;
   
}